@@ -1,5 +1,5 @@
 AUX qd-2.3.7-test.patch 305 RMD160 009f10bb3dba3b4191194dcd9418ce08b70e3bf0 SHA1 4f94582903ef6c75c8887df241e88d0a617ee057 SHA256 f4da52c9c23969bc07a178dd4a250cbbdb0f9fd8c5905620669c8a012548fbe2
 DIST qd-2.3.7.tar.gz 577083 RMD160 76ee63ef60ccd491b052ba4a5f310a05786a8040 SHA1 5b54c2ab176c1a0ca9602231c6c8b87f538fabb7 SHA256 c886c96ca8081196089fe00eac74765a43e7500ae27e2e107a7c4f10fa95b4f1
-EBUILD qd-2.3.7.ebuild 1169 RMD160 be29057691ad5ae9098252a81f12453b1d9ae070 SHA1 8b477e7ca35e9872dee85fa0dc077788a8b8c0ff SHA256 4dbf908df8db56e1030a87e8580c268f9482f569c5bb835c9fdc5d70e1629ba3
-MISC ChangeLog 350 RMD160 4a68b2fc43b56601d88d0cbde8343c0082e7a369 SHA1 2264ca2d13b0fe5b722828f55f740e0bf1634543 SHA256 c8b7f5dc62bf661412d7139dbe6ad4f2cc0bc5ee22a9479843c8b4b5498a194c
+EBUILD qd-2.3.7.ebuild 892 RMD160 dcddcde93b3784ef9e559cd985f958f1c07f7726 SHA1 5424a52aae81be4f4162d44ba6e5d4c26962a7d7 SHA256 da0d23de7108717e86ae0d5e4660ff9301dfb85124292a710295822a92c4e024
+MISC ChangeLog 430 RMD160 3fc761725102bd41ad0936bfc0a78ea109676cd0 SHA1 8f1453fc5e4e3557afe54f1acdb94a18584df1c2 SHA256 c05d6c0408c1dfc117cd812bd54f6c6557c4972b1f536fb8f84689a57ff25b34
 MISC metadata.xml 334 RMD160 40c1d8c9f178cd40a09f7c40e9ac335ade0059ca SHA1 b765fa3da44b33d6bce4f6d80ef34df1d9b6366c SHA256 3444d77952a6cffa63be0a5082a506a95fdf3cb93a0fc5811bd86dee40ae7cda
