@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/qd/qd-2.3.7.ebuild,v 1.1 2009/04/13 20:27:45 grozin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/qd/qd-2.3.7.ebuild,v 1.2 2009/04/13 21:03:53 grozin Exp $
 EAPI=2
 inherit eutils
 DESCRIPTION="Quad-double and double-double float arithmetics"
@@ -32,21 +32,4 @@ src_install() {
 	cd "${D}"/usr/share/doc || die "cd failed"
 	mv ${PN}/${PN}.pdf ${PF}/ || die "mv failed"
 	rm -rf ${PN}/ || die "rm failed"
-}
-
-src_test() {
-	local prog
-	make demo
-	cd tests
-	for prog in c_test f_test huge pslq_test qd_test qd_timer quadt_test; do
-		./${prog}
-	done
-	cd ..
-	if use fortran; then
-		cd fortran
-		for prog in quaderq quadgsq quadgsq2d quadtsq quadtsq2d; do
-			./${prog}
-		done
-		cd ..
-	fi
 }
