@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/qd
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/qd/ChangeLog,v 1.1 2009/04/13 20:27:45 grozin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/qd/ChangeLog,v 1.2 2009/04/13 21:03:53 grozin Exp $
+
+  14 Apr 2009; Andrey Grozin <grozin@gentoo.org> qd-2.3.7.ebuild:
+  test fixed
 
 *qd-2.3.7 (14 Apr 2009)
 
